--- a/zad1.html
+++ b/zad1.html
@@ -11,8 +11,8 @@
    </div>
    <script>
    var id = document.getElementById('siewo');
-   id.innerHTML = "trololoololololooool"
-   id.innerHTML.style.fontSize="50";
+   id.innerHTML ="trololololo".fontcolor("green");
+
    </script>
  </body>
 </html>
