--- a/zad1.html
+++ b/zad1.html
@@ -2,7 +2,7 @@
 <html>
  <head>
    <meta charset="UTF-8">
-   <title>Retro Game | Canvas</title>
+   <title>zad | 1</title>
 
  </head>
  <body>
@@ -12,6 +12,13 @@
    <script>
    var id = document.getElementById('siewo');
    id.innerHTML ="trololololo".fontcolor("green");
+   var imie=prompt("siewo");
+   if(imie==null){
+     alert("siewo "+imie);
+   }
+   else{
+     alert("siewo "+imie);
+   }
 
    </script>
  </body>
